Coverity analysis defect 155126: Using invalid iterator

XMLWordPrintableJSON

    • Server Security
    • Fully Compatible
    • ALL
    • v8.0, v7.0, v6.0
    • Security 2025-03-17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Using invalid iterator

      Undefined behavior may result; the program may crash or subtly misbehave. An invalid or past-the-end iterator is being used
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/modules/enterprise/src/kmip/kmip_key_active_periodic_job.cpp:47: INVALIDATE_ITERATOR 155126 Calling "find" with element "num" returns the end iterator.
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/modules/enterprise/src/kmip/kmip_key_active_periodic_job.cpp:47: INVALIDATE_ITERATOR 155126 Assigning: "<temporary>" = "mongo::kmip::keyStateToString[abi:cxx11].find(num)".
      /data/bazel_cache/1de52aaeb35278243ca29a4785ce7969/execroot/_main_/src/mongo/db/modules/enterprise/src/kmip/kmip_key_active_periodic_job.cpp:47: INVALIDATE_ITERATOR 155126 Dereferencing iterator "mongo::kmip::keyStateToString[abi:cxx11].find(num)" though it is already past the end of its container.

            Assignee:
            Gabriel Marks
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: