SERVER-101230 Use switch for enum-to-string conversion (#33069)